--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera! It's a great course</h1>
+<h1> Hello Coursera! This browser-sync is amazing ^_^</h1>
 </body>
 </html>
