--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -28,13 +28,13 @@
       	<div id="collapsable-nav" class="collapse navbar-collapse">
       	  <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-              <a href="#">Chicken<span class="sr-only">(current)</span></a>
+              <a href="#Chicken">Chicken</a>
             </li>
 	        <li>
-	          <a href="#">Beef</a>
+	          <a href="#Beef">Beef</a>
 	        </li>
 	        <li>
-	          <a href="#">Sushi</a>
+	          <a href="#Sushi">Sushi</a>
 	        </li>
           </ul>
         </div>
@@ -43,20 +43,44 @@
   </header>
 
   <div id="main-content" class="container">
-  	<div id="heading" class="text-center">Our Menu</div>
+  	<h2 id="heading" class="text-center">Our Menu</h2>
   	
   	<section id="long-parag" class="row">
-  	  <div class="col-xs-12">	
-  	  	<div id="long-parag-heading" class="text-center">Chicken</div>
-  	  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat lectus et aliquam tempus. Donec est nibh, tristique ac euismod at, aliquet non dolor. Sed vel dui hendrerit, lobortis sem vitae, euismod nulla. Phasellus accumsan imperdiet condimentum. Sed ullamcorper ornare libero, vitae molestie mi. Vivamus ex magna, rhoncus eget gravida vel, pharetra non risus. Donec suscipit purus felis, vitae convallis purus suscipit quis. Integer sit amet rutrum ligula, eget laoreet elit. Aliquam rutrum sodales metus, a fermentum neque vulputate in. Mauris tincidunt arcu gravida dolor pellentesque, in lacinia metus ornare. Sed in placerat massa, at venenatis magna.
+  	  <section class="box col-md-4 col-sm-6 col-xs-12">
+  	    <div id="marginizer">
+          <h3 id = "Chicken" class = "title text-center">Chicken</h3>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat lectus et aliquam tempus. Donec est nibh, tristique ac euismod at, aliquet non dolor. Sed vel dui hendrerit, lobortis sem vitae, euismod nulla. Phasellus accumsan imperdiet condimentum. Sed ullamcorper ornare libero, vitae molestie mi. Vivamus ex magna, rhoncus eget gravida vel, pharetra non risus. Donec suscipit purus felis, vitae convallis purus suscipit quis. Integer sit amet rutrum ligula, eget laoreet elit. Aliquam rutrum sodales metus, a fermentum neque vulputate in. Mauris tincidunt arcu gravida dolor pellentesque, in lacinia metus ornare. Sed in placerat massa, at venenatis magna.
 
-		Ut non leo laoreet ante auctor egestas. Ut ut mattis risus, vel sollicitudin nibh. Maecenas rutrum lobortis suscipit. Sed sollicitudin ultricies arcu, sit amet efficitur orci. Duis posuere in urna non fermentum. Praesent congue blandit nisi, eget mollis dolor laoreet vitae. Proin non consequat orci, ac accumsan ex. Aenean pretium ullamcorper enim ac tempor. Mauris enim magna, aliquam ut hendrerit eget, vestibulum eget eros. Nam imperdiet imperdiet nibh, sit amet volutpat metus pharetra a. Aliquam congue eget magna at sodales. Sed feugiat ut turpis id elementum.
+		  Ut non leo laoreet ante auctor egestas. Ut ut mattis risus, vel sollicitudin nibh. Maecenas rutrum lobortis suscipit. Sed sollicitudin ultricies arcu, sit amet efficitur orci. Duis posuere in urna non fermentum. Praesent congue blandit nisi, eget mollis dolor laoreet vitae. Proin non consequat orci, ac accumsan ex. Aenean pretium ullamcorper enim ac tempor. Mauris enim magna, aliquam ut hendrerit eget, vestibulum eget eros. Nam imperdiet imperdiet nibh, sit amet volutpat metus pharetra a. Aliquam congue eget magna at sodales. Sed feugiat ut turpis id elementum.
 
-		Fusce in eleifend est. Morbi vehicula sapien et malesuada vestibulum. Cras vehicula dolor id molestie volutpat. Cras elementum 	quam eget ex auctor euismod. Praesent elementum nunc in purus elementum, efficitur interdum mauris fringilla. In laoreet pulvinar est ac consequat. Etiam efficitur, tortor ut posuere pharetra, ipsum mauris suscipit nisi, et sodales risus quam vitae magna. Nullam vehicula rutrum ex sed imperdiet. Vivamus mollis id augue quis hendrerit.
-
-		Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed lobortis lobortis sapien, nec congue sapien molestie at. Aenean congue lectus eros, id dapibus libero mattis in. Pellentesque nisi quam, fringilla nec efficitur quis, lacinia ut nisi. Donec efficitur mi in lacus cursus pharetra. In sed nisi vitae turpis sodales scelerisque et at lacus. Morbi iaculis pellentesque sollicitudin.</p>
+		  Fusce in eleifend est. Morbi vehicula sapien et malesuada vestibulum. Cras vehicula dolor id molestie volutpat. Cras elementum quam eget ex auctor euismod. Praesent elementum nunc in purus elementum, efficitur interdum mauris fringilla. In laoreet pulvinar est ac consequat. Etiam efficitur, tortor ut posuere pharetra, ipsum mauris suscipit nisi, et sodales risus quam vitae magna. Nullam vehicula rutrum ex sed imperdiet. Vivamus mollis id augue quis hendrerit. </p>
+		  <a href="#heading">Back to Top</a>
   	    </div>
-  	  </div>  	
+  	  </section>
+  
+  	  <section class="box col-md-4 col-sm-6 col-xs-12">
+  	    <div id="marginizer">
+	  	  <h3 id = "Beef" class = "title text-center">Beef</h3>
+	  	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat lectus et aliquam tempus. Donec est nibh, tristique ac euismod at, aliquet non dolor. Sed vel dui hendrerit, lobortis sem vitae, euismod nulla. Phasellus accumsan imperdiet condimentum. Sed ullamcorper ornare libero, vitae molestie mi. Vivamus ex magna, rhoncus eget gravida vel, pharetra non risus. Donec suscipit purus felis, vitae convallis purus suscipit quis. Integer sit amet rutrum ligula, eget laoreet elit. Aliquam rutrum sodales metus, a fermentum neque vulputate in. Mauris tincidunt arcu gravida dolor pellentesque, in lacinia metus ornare. Sed in placerat massa, at venenatis magna.
+
+		  Ut non leo laoreet ante auctor egestas. Ut ut mattis risus, vel sollicitudin nibh. Maecenas rutrum lobortis suscipit. Sed sollicitudin ultricies arcu, sit amet efficitur orci. Duis posuere in urna non fermentum. Praesent congue blandit nisi, eget mollis dolor laoreet vitae. Proin non consequat orci, ac accumsan ex. Aenean pretium ullamcorper enim ac tempor. Mauris enim magna, aliquam ut hendrerit eget, vestibulum eget eros. Nam imperdiet imperdiet nibh, sit amet volutpat metus pharetra a. Aliquam congue eget magna at sodales. Sed feugiat ut turpis id elementum.
+
+		  Fusce in eleifend est. Morbi vehicula sapien et malesuada vestibulum. Cras vehicula dolor id molestie volutpat. Cras elementum quam eget ex auctor euismod. Praesent elementum nunc in purus elementum, efficitur interdum mauris fringilla. In laoreet pulvinar est ac consequat. Etiam efficitur, tortor ut posuere pharetra, ipsum mauris suscipit nisi, et sodales risus quam vitae magna. Nullam vehicula rutrum ex sed imperdiet. Vivamus mollis id augue quis hendrerit. </p>
+		  <a href="#heading">Back to Top</a>
+		</div>	  	  
+	  </section>
+  
+  	  <section class="box col-md-4 col-sm-12 col-xs-12">
+  	    <div id="marginizer">
+  		  <h3 id = "Sushi" class = "title text-center">Sushi</h3>
+  		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat lectus et aliquam tempus. Donec est nibh, tristique ac euismod at, aliquet non dolor. Sed vel dui hendrerit, lobortis sem vitae, euismod nulla. Phasellus accumsan imperdiet condimentum. Sed ullamcorper ornare libero, vitae molestie mi. Vivamus ex magna, rhoncus eget gravida vel, pharetra non risus. Donec suscipit purus felis, vitae convallis purus suscipit quis. Integer sit amet rutrum ligula, eget laoreet elit. Aliquam rutrum sodales metus, a fermentum neque vulputate in. Mauris tincidunt arcu gravida dolor pellentesque, in lacinia metus ornare. Sed in placerat massa, at venenatis magna.
+
+   		  Ut non leo laoreet ante auctor egestas. Ut ut mattis risus, vel sollicitudin nibh. Maecenas rutrum lobortis suscipit. Sed sollicitudin ultricies arcu, sit amet efficitur orci. Duis posuere in urna non fermentum. Praesent congue blandit nisi, eget mollis dolor laoreet vitae. Proin non consequat orci, ac accumsan ex. Aenean pretium ullamcorper enim ac tempor. Mauris enim magna, aliquam ut hendrerit eget, vestibulum eget eros. Nam imperdiet imperdiet nibh, sit amet volutpat metus pharetra a. Aliquam congue eget magna at sodales. Sed feugiat ut turpis id elementum.
+
+ 		  Fusce in eleifend est. Morbi vehicula sapien et malesuada vestibulum. Cras vehicula dolor id molestie volutpat. Cras elementum quam eget ex auctor euismod. Praesent elementum nunc in purus elementum, efficitur interdum mauris fringilla. In laoreet pulvinar est ac consequat. Etiam efficitur, tortor ut posuere pharetra, ipsum mauris suscipit nisi, et sodales risus quam vitae magna. Nullam vehicula rutrum ex sed imperdiet. Vivamus mollis id augue quis hendrerit. </p>  
+ 		  <a href="#heading">Back to Top</a>
+        </div>
+ 	  </section>  	
   	</section>
   </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
